with text overflowing issue resolved

--- a/src/styles/InfoHead.css
+++ b/src/styles/InfoHead.css
@@ -6,7 +6,7 @@
     display: inline-flex;
     height: 280px;
     width: 30%;
-   
+    overflow: auto;
 }
 .info-head .ui.card:first-child{
     background: #efeff7;
